--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-intermediate-oppgave-del-4",
+  "name": "min-hjemmeside",
   "private": true,
   "version": "0.0.0",
   "type": "module",
